--- a/vue_home.html
+++ b/vue_home.html
@@ -2,11 +2,11 @@
     <head>
         <title>Hashboard</title>
         <link rel="stylesheet" href="vue_home.css">
-        <script src="vue.js"></script>
+        <!-- <script src="vue.js"></script> -->
     </head>
     <body>
     	<div id="app">
-    		<app-title></app-title>
+    		<!-- <app-title></app-title>
             <search-bar v-bind:listexists="listExists" v-bind:userdata="userList"></search-bar>
     		<app-list v-bind:userdata="userList" v-bind:nofilter="nofilter"></app-list>
     		<center>
@@ -14,8 +14,9 @@
             </center>
             <center class="about">
                 <strong><a href="https://www.amoghagnihotri.com" target="_blank">About</a></strong>
-            </center>
-    	</div>
+            </center> -->
+        </div>
+        <script src="vue_home_bundle.js"></script>
 	</body>
-	<script src="vue_home.js"></script>
+	
 </html>
