--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Hashboard</title>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="home_bundle.css">
     </head>
     <body>
     	<div id="app"></div>
