fix popup height issue

--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<html>
+<html style="display: inline-table;">
     <head>
         <title>Hashboard</title>
         <link rel="stylesheet" href="home_bundle.css">
